--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -8,13 +8,16 @@ spring:
     username: root
     password: 12345678
     url: r2dbc:postgresql://parking.ciusywni3ifc.us-east-1.rds.amazonaws.com:5432/parking?sslmode=require
+    #pool:
+      #max-size: 10
+      #max-acquire-time: 10s
   profiles:
     include: null
 management:
   endpoints:
     web:
       exposure:
-        include: "health,prometheus"
+        include: "health,prometheus" # para que sirve esto?
   endpoint:
     health:
       probes:
