--- a/infrastructure/entry-points/controllers/build.gradle
+++ b/infrastructure/entry-points/controllers/build.gradle
@@ -1,7 +1,10 @@
 dependencies {
     implementation project(':model')
     implementation project(':usecase')
-    implementation project(':r2dbc-postgresql')
-    implementation 'org.springframework:spring-context'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 }
