se añade configuracion para manejar los tokens como seguridad

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -23,6 +23,9 @@ management:
       probes:
         enabled: true
 
+cors:
+  allowed-origins: "*"
+
 endpoint:
   micro:
     user: ${ENDPOINT_USER:http://localhost:8080}
