--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.register('explodedJar', Copy) {
