--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -3,39 +3,5 @@ server:
 spring:
   application:
     name: "parking"
-  r2dbc:
-    name: parking
-    username: root
-    password: 12345678
-    url: r2dbc:postgresql://parking.ciusywni3ifc.us-east-1.rds.amazonaws.com:5432/parking?sslmode=require
-    #pool:
-      #max-size: 10
-      #max-acquire-time: 10s
   profiles:
-    include: null
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "health,prometheus" # para que sirve esto?
-  endpoint:
-    health:
-      probes:
-        enabled: true
-
-cors:
-  allowed-origins: "*"
-
-endpoint:
-  micro:
-    user: ${ENDPOINT_USER:http://localhost:8080}
-
-variable:
-  limit:
-    parkings: ${LIMIT_PARKINGS_BY_LOCATION:2}
-
-
-resilience:
-  communication:
-    max-attempts: 3
-    backoff-interval: 1
+    active: dev
