--- a/deployment/azure-pipelines.yml
+++ b/deployment/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Gradle
-# Build your Java project and run tests with Gradle using a Gradle wrapper script.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
   - develop
   - master
@@ -28,6 +23,27 @@ variables:
       value: prod
 
 steps:
+  - checkout: self
+    fetchDepth: 0
+
+  - task: SonarCloudPrepare@1
+    inputs:
+      SonarCloud: 'sonarcloud_auth'
+      organization: 'bootcampv4devops'
+      scannerMode: 'Other'
+      extraProperties: |
+        # Additional properties that will be passed to the scanner,
+        # Put one key=value per line, example:
+        sonar.projectKey=bootcampV4DevOps_Personal-projects
+        sonar.projectName=Personal projects
+        sonar.modules=applications/app-service,infrastructure/entry-points/controllers,domain/model,infrastructure/driven-adapters/r2dbc-postgresql,domain/usecase
+        sonar.sources=src,deployment,settings.gradle,main.gradle,build.gradle,applications/app-service/build.gradle,infrastructure/entry-points/controllers/build.gradle,domain/model/build.gradle,infrastructure/driven-adapters/r2dbc-postgresql/build.gradle,domain/usecase/build.gradle
+        sonar.exclusions=**/MainApplication.java
+        sonar.java.coveragePlugin=jacoco
+        sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco.xml
+        sonar.junit.reportsPath=**/TEST-*.xml
+        sonar.test=**/src/test
+
   - task: Gradle@2
     inputs:
       workingDirectory: ''
@@ -38,7 +54,11 @@ steps:
       jdkArchitectureOption: 'x64'
       publishJUnitResults: true
       testResultsFiles: '**/TEST-*.xml'
-      tasks: 'build'
+      tasks: 'build sonar'
+
+  - task: SonarCloudPublish@1
+    inputs:
+      pollingTimeoutSec: '300'
 
   - task: Docker@2
     inputs:
