--- a/applications/app-service/src/main/resources/application-dev.yaml
+++ b/applications/app-service/src/main/resources/application-dev.yaml
@@ -1,9 +1,9 @@
 spring:
   r2dbc:
-    name: parking
-    username: root
-    password: jaider18
-    url: r2dbc:postgresql://parking.ciusywni3ifc.us-east-1.rds.amazonaws.com:5432/parking?sslmode=require
+    name: ${NAME_DATABASE:parking}
+    username: ${DATASOURCE_USERNAME:root}
+    password: ${DATASOURCE_PASSWORD:jaider18}
+    url: ${DATASOURCE_URL:r2dbc:postgresql://parking.ciusywni3ifc.us-east-1.rds.amazonaws.com:5432/parking?sslmode=require}
     #pool:
       #max-size: 10
       #max-acquire-time: 10s
